# crates-mcp

./: Cargo.toml  README.md
src/: crates_client.rs  docs_client.rs  main.rs  mcp_server.rs  types.rs
