[package]
name = "crates-mcp"
version = "0.1.0"
edition = "2024"
authors = ["Pato Lankenau <rust@p.lankenau.io>"]
license = "MIT"
description = "MCP server for querying Rust crates from crates.io and docs.rs. Search crates, get info, versions, dependencies, and documentation."
keywords = ["mcp", "claude", "crates", "crates.io", "ai"]
repository = "https://github.com/pato/crates-mcp"

[dependencies]
mcp-core = "0.1"
crates-index = { version = "3.10", features = ["git"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
urlencoding = "2.1"
